--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cezaraugusto/node-module-quick-start.git"
-  },
+  "repository": "https://github.com/cezaraugusto/prefers-yarn.git",
   "engines": {
     "node": ">=10"
   },
-  "name": "node-module-quick-start",
+  "name": "prefers-yarn",
   "version": "0.0.0",
-  "description": "Template for new Node modules",
+  "description": "Check whether the working directory prefers yarn over npm",
   "main": "module.js",
-  "author": {
-    "name": "Cezar Augusto",
-    "email": "boss@cezaraugusto.net",
-    "url": "https://cezaraugusto.net"
-  },
+  "author": "Cezar Augusto <boss@cezaraugusto.net> (https://cezaraugusto.net)",
   "scripts": {
     "test": "jest"
   },
@@ -27,6 +20,7 @@
     "node-module"
   ],
   "devDependencies": {
+    "fs-extra": "^9.0.1",
     "jest": "^26.6.1"
   }
 }
